<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Figuras</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_areas">Areas</string>
    <string name="title_activity_volumenes">Volumenes</string>
    <string name="title_activity_mostrar">Mostrar</string>

    <string-array name="lstPrincipal">
        <item>Areas</item>
        <item>Volumen</item>
        <item>Operaciones Realizadas</item>
    </string-array>
    <string-array name="lstAreas">
        <item>Cuadrado</item>
        <item>Rectangulo</item>
        <item>Triangulo</item>
        <item>Circulo</item>
    </string-array>
    <string-array name="lstVolumen">
        <item>Esfera</item>
        <item>Cilindro</item>
        <item>Cono</item>
        <item>Cubo</item>
    </string-array>

    <string name="calcular">Calcular</string>
    <string name="borrar">Borrar</string>
    <string name="valorlado">Valor Lado</string>
    <string name="resultado">Resultado</string>
    <string name="area">Area</string>
    <string name="volumen">Volumen</string>
    <string name="num">No.</string>
    <string name="operacion">Operacion</string>
    <string name="dato">Dato</string>
    <string name="cuadrado">Cuadrado</string>
    <string name="rectangulo">Rectangulo</string>
    <string name="triangulo">Triangulo</string>
    <string name="circulo">Circulo</string>
    <string name="title_activity_cuadrado">Cuadrado</string>
    <string name="resultadocuadrado"></string>
    <string name="title_activity_rectangulo">Rectangulo</string>
    <string name="resultadorectangulo"></string>
    <string name="title_activity_triangulo">Triangulo</string>
    <string name="resultadotriangulo"></string>
    <string name="title_activity_circulo">Circulo</string>
    <string name="resultadocirculo"></string>
    <string name="altura">Altura</string>
    <string name="base">Base</string>
    <string name="radio">Radio</string>
    <string name="title_activity_esfera">Esfera</string>
    <string name="title_activity_cilindro">Cilindro</string>
    <string name="title_activity_cubo">Cubo</string>
    <string name="title_activity_cono">Cono</string>
    <string name="cilindro">Cilindro</string>
    <string name="cono">Cono</string>
    <string name="esfera">Esfera</string>
    <string name="cubo">Cubo</string>
    <string name="arista">Arista</string>
    <string name="title_activity_mostra_resultados">MostraResultados</string>
    <string name="txtResultados"></string>
    <string name="title_activity_resultado_cuadrado">ResultadoCuadrado</string>
    <string name="title_activity_resultado_rectangulo">ResultadoRectangulo</string>
    <string name="title_activity_resultado_triangulo">ResultadoTriangulo</string>
    <string name="title_activity_resultado_circulo">ResultadoCirculo</string>
    <string name="ok">OK</string>
    <string name="title_activity_resultado_esfera">ResultadoEsfera</string>
    <string name="title_activity_resultado_cilindro">ResultadoCilindro</string>
    <string name="title_activity_resultado_cono">ResultadoCono</string>
    <string name="title_activity_resultado_cubo">ResultadoCubo</string>

</resources>