<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Cilindro" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="80dp"
        android:text="@string/cilindro"
        android:textSize="30sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="80dp"
            android:paddingRight="0dp"
            android:text="@string/radio" />

        <EditText
            android:id="@+id/txtRadioCilindro"
            android:layout_width="82dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="number"
            android:paddingLeft="10dp" >

            <requestFocus />
        </EditText>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/TextView01"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="80dp"
            android:paddingRight="0dp"
            android:text="@string/altura" />

        <EditText
            android:id="@+id/txtAlturaCilindro"
            android:layout_width="79dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="number"
            android:paddingLeft="10dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="80dp" >

        <Button
            android:id="@+id/cmdCalcular"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="calcularCilindro"
            android:text="@string/calcular" />

        <Button
            android:id="@+id/cmdBorrarCilindro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="borrar"
            android:text="@string/borrar" />
    </LinearLayout>

</LinearLayout>