<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center|top"
    android:orientation="vertical"
    tools:context=".Cuadrado" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cuadrado"
        android:textSize="30sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="80dp"
            android:paddingRight="0dp"
            android:text="@string/valorlado" />

        <EditText
            android:id="@+id/txtLadoCuadrado"
            android:layout_width="79dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="number"
            android:paddingLeft="10dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="80dp" >

        <Button
            android:id="@+id/cmdCalcularCuadrado"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="calcularCuadrado"
            android:text="@string/calcular" />

        <Button
            android:id="@+id/cmdBorrarCuadrado"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="borrar"
            android:text="@string/borrar" />

    </LinearLayout>

</LinearLayout>